[terra] more potions and bring in caves